Fix spacing if not all fields are filled out

--- a/src/app/themes/northeasternUniversity/css/__styles/archive/program/_card.scss
+++ b/src/app/themes/northeasternUniversity/css/__styles/archive/program/_card.scss
@@ -236,3 +236,9 @@
         }
     }
 }
+
+.post-type-archive-program {
+    .program-card__info {
+        margin-top: 0;
+    }
+}
